--- a/index.html
+++ b/index.html
@@ -12,14 +12,25 @@
 <body>
   <div class="wrap">
     <h1>Happy Birthday ❤️</h1>
-    <p class="hint">Click the candle flame to blow it out</p>
+    <p class="hint">Click the flame to blow it out</p>
 
     <div class="cake-stage">
       <div class="cake" id="cake" role="button" tabindex="0" aria-label="Blow out the candle">
         <div class="plate"></div>
 
-        <div class="cake-body">
-          <div class="icing"></div>
+        <div class="tiramisu">
+          <div class="top-cocoa"></div>
+
+          <div class="layers">
+            <div class="layer cream"></div>
+            <div class="layer coffee"></div>
+            <div class="layer cream"></div>
+            <div class="layer coffee"></div>
+            <div class="layer cream"></div>
+          </div>
+
+          <div class="ladyfingers left"></div>
+          <div class="ladyfingers right"></div>
 
           <div class="candle">
             <div class="candle-body"></div>
@@ -31,7 +42,7 @@
     </div>
 
     <button class="btn" id="blowBtn">Blow the candle ✨</button>
-    <p class="small">After you blow it out, you’ll go to your surprise.</p>
+    <p class="small">After you blow it out, your surprise begins.</p>
   </div>
 
   <script src="assets/js/intro.js"></script>
