--- a/index.html
+++ b/index.html
@@ -16,21 +16,12 @@
 
     <div class="cake-stage">
       <div class="cake" id="cake" role="button" tabindex="0" aria-label="Blow out the candle">
-        <div class="plate"></div>
+        <div class="iso-shadow"></div>
 
-        <div class="tiramisu">
-          <div class="top-cocoa"></div>
-
-          <div class="layers">
-            <div class="layer cream"></div>
-            <div class="layer coffee"></div>
-            <div class="layer cream"></div>
-            <div class="layer coffee"></div>
-            <div class="layer cream"></div>
-          </div>
-
-          <div class="ladyfingers left"></div>
-          <div class="ladyfingers right"></div>
+        <div class="tiramisu-iso">
+          <div class="top"></div>
+          <div class="front"></div>
+          <div class="side"></div>
 
           <div class="candle">
             <div class="candle-body"></div>
