--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p class="hint">Tap the candle flame to blow it out</p>
 
     <div class="stage" id="stage" role="button" tabindex="0" aria-label="Blow out the candle">
-      <img class="tiramisu-img" src="assets/img/tiramisu.jpg" alt="Tiramisu" />
+      <img class="tiramisu-img" src="assets/img/tiramisu.png" alt="Tiramisu" />
 
       <!-- Candle overlay -->
       <div class="candle">
