--- a/cake.html
+++ b/cake.html
@@ -9,7 +9,7 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Happy Birthday ❤️</title>
+  <title>Happy Birthday, babyyy!</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@400;600&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/intro.css">
@@ -17,8 +17,8 @@
 
 <body>
   <div class="wrap">
-    <h1>Happy Birthday ❤️</h1>
-    <p class="hint">Tap the candle flame to blow it out</p>
+    <h1>Happy Birthday, babyyy!</h1>
+    <p class="hint">Since we missed our tiramisu this time, tap the flame to blow it out.</p>
 
     <div class="stage" id="stage" role="button" tabindex="0" aria-label="Blow out the candle">
       <img class="tiramisu-img" src="assets/img/tiramisu.png" alt="Tiramisu" />
@@ -31,7 +31,6 @@
       </div>
     </div>
 
-    <p class="small">After you blow it out, your surprise begins.</p>
   </div>
 
   <script src="assets/js/intro.js"></script>
