--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Quick Check 👀</title>
+  <title>hmm..</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@400;600&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/gate.css">
@@ -11,11 +11,11 @@
 
 <body>
   <main class="wrap">
-    <h1 id="question">Are you XXX?</h1>
+    <h1 id="question">Are you Chaitanya?</h1>
 
     <div class="card" id="card">
       <img id="catImg" src="assets/img/cat1.jpg" alt="Cat" />
-      <p id="message" class="message">Be honest.</p>
+      <p id="message" class="message">aka the most beautiful woman known in existence, and the love of my life?</p>
     </div>
 
     <div class="btnRow" id="btnRow">
