--- a/cake.html
+++ b/cake.html
@@ -17,8 +17,8 @@
 
 <body>
   <div class="wrap">
-    <h1>Happy Birthday, babyyy! ❤️❤️❤️❤️</h1>
-    <p class="hint">Since we missed eating one this time, here's a virtual tiramisu. Tap the flame to blow it out!</p>
+    <h1>Happy Birthday, babyyy! ❤️</h1>
+    <p class="hint">Since we missed eating one this time, here's a virtual tiramisu. Tap the flame!</p>
 
     <div class="stage" id="stage" role="button" tabindex="0" aria-label="Blow out the candle">
       <img class="tiramisu-img" src="assets/img/tiramisu.png" alt="Tiramisu" />
