--- a/clock.html
+++ b/clock.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Since I met you, and  </title>
+  <title>Since I met you.. </title>
 
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@400;600&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/clock.css">
@@ -22,7 +22,7 @@
 
       <div class="timebox" aria-live="polite">
         <div class="time" id="time">—</div>
-        <div class="label">Since I met you</div>
+        <div class="label">Since I met you, and I could not be more grateful to whoever's up there.</div>
       </div>
     </div>
 
