--- a/woah.html
+++ b/woah.html
@@ -20,8 +20,8 @@
   <!-- Foreground content -->
   <main class="wrap">
     <div class="card">
-      <img class="her" src="assets/img/her.jpg" alt="Her photo" />
-      <div class="name">xyzzy</div>
+      <img class="her" src="assets/img/her1.jpeg" alt="Her photo" />
+      <div class="name">You have become the light of my life,..</div>
       <button class="btn" id="continueBtn">Continue →</button>
     </div>
   </main>
