--- a/woah.html
+++ b/woah.html
@@ -1,3 +1,4 @@
+<!-- woah.html (REPLACE FULL FILE) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,17 +11,13 @@
 </head>
 
 <body>
-  <!-- Tiled background video -->
-  <div class="bg" aria-hidden="true">
-    <video class="tile" autoplay loop muted playsinline>
-      <source src="assets/video/catwoah.mp4" type="video/mp4">
-    </video>
-  </div>
+  <!-- Tiled GIF background -->
+  <div class="bg" aria-hidden="true"></div>
 
   <!-- Foreground content -->
   <main class="wrap">
     <div class="card">
-      <img class="her" src="assets/img/her1.jpeg" alt="Her photo" />
+      <img class="her" src="assets/img/her.jpg" alt="Her photo" />
       <div class="name">xyzzy</div>
       <button class="btn" id="continueBtn">Continue →</button>
     </div>
