--- a/woah.html
+++ b/woah.html
@@ -17,7 +17,7 @@
   <!-- Foreground content -->
   <main class="wrap">
     <div class="card">
-      <img class="her" src="assets/img/her.jpg" alt="Her photo" />
+      <img class="her" src="assets/img/her1.jpeg" alt="Her photo" />
       <div class="name">xyzzy</div>
       <button class="btn" id="continueBtn">Continue →</button>
     </div>
