--- a/woah.html
+++ b/woah.html
@@ -1,4 +1,3 @@
-<!-- woah.html (REPLACE FULL FILE) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,13 +10,39 @@
 </head>
 
 <body>
-  <!-- Tiled GIF background -->
+  <!-- Tiled GIF background (only visible after lighthouse step) -->
   <div class="bg" aria-hidden="true"></div>
 
-  <!-- Foreground content -->
-  <main class="wrap">
-    <div class="card">
-      <img class="her" src="assets/img/her1.jpeg" alt="Her photo" />
+  <!-- STEP 1: Text + Lighthouse -->
+  <main class="stage stage--intro" id="introStage">
+    <h1 class="line">you have become the lighthouse of my universe</h1>
+
+    <div class="lighthouseWrap" id="lighthouseWrap" role="button" tabindex="0" aria-label="Click the lighthouse">
+      <div class="lighthouse">
+        <div class="beam beam1"></div>
+        <div class="beam beam2"></div>
+
+        <div class="tower">
+          <div class="towerStripe"></div>
+          <div class="towerStripe"></div>
+          <div class="towerStripe"></div>
+        </div>
+
+        <div class="top">
+          <div class="lantern"></div>
+          <div class="roof"></div>
+        </div>
+
+        <div class="base"></div>
+      </div>
+      <p class="tapHint">Tap the lighthouse ✨</p>
+    </div>
+  </main>
+
+  <!-- STEP 2: Final view (GIF + picture + text + button) -->
+  <main class="stage stage--final" id="finalStage" aria-hidden="true">
+    <div class="finalWrap">
+      <img class="her" src="assets/img/her.jpg" alt="Her photo" />
       <div class="name">xyzzy</div>
       <button class="btn" id="continueBtn">Continue →</button>
     </div>
