--- a/woah.html
+++ b/woah.html
@@ -42,7 +42,7 @@
   <!-- STEP 2: Final view (GIF + picture + text + button) -->
   <main class="stage stage--final" id="finalStage" aria-hidden="true">
     <div class="finalWrap">
-      <img class="her" src="assets/img/her.jpg" alt="Her photo" />
+      <img class="her" src="assets/img/her1.jpeg" alt="Her photo" />
       <div class="name">xyzzy</div>
       <button class="btn" id="continueBtn">Continue →</button>
     </div>
