--- a/clock.html
+++ b/clock.html
@@ -22,7 +22,7 @@
 
       <div class="timebox" aria-live="polite">
         <div class="time" id="time">—</div>
-        <div class="label">Since I met you, and I could not be more grateful to whoever's up there.</div>
+        <div class="label">..since I met you, and I could not be more grateful for every second we've spent together.</div>
       </div>
     </div>
 
