--- a/woah.html
+++ b/woah.html
@@ -15,7 +15,7 @@
 
   <!-- STEP 1 -->
   <main class="stage stage--intro" id="introStage">
-    <h1 class="line">you have become the lighthouse of my universe</h1>
+    <h1 class="line">you have become the lighthouse of my universe..</h1>
 
     <div class="lighthouseBtn" id="lighthouseBtn" role="button" tabindex="0" aria-label="Click the lighthouse">
       <div class="beams" aria-hidden="true">
@@ -24,14 +24,14 @@
       </div>
 
       <img class="lighthouseImg" src="assets/img/lighthouse.png" alt="Lighthouse" />
-      <p class="tapHint">Tap the lighthouse ✨</p>
+      <p class="tapHint">(tap it)✨</p>
     </div>
   </main>
 
   <!-- STEP 2 -->
   <main class="stage stage--final" id="finalStage" aria-hidden="true">
     <div class="finalWrap">
-      <img class="her" src="assets/img/her.jpg" alt="Her photo" />
+      <img class="her" src="assets/img/us1.jpeg" alt="Her photo" />
       <div class="name">xyzzy</div>
       <button class="btn" id="continueBtn">Continue →</button>
     </div>
