--- a/woah.html
+++ b/woah.html
@@ -32,7 +32,7 @@
   <main class="stage stage--final" id="finalStage" aria-hidden="true">
     <div class="finalWrap">
       <img class="her" src="assets/img/us1.jpeg" alt="Her photo" />
-      <div class="name">xyzzy</div>
+      <div class="name">..and the home I've always imagined.</div>
       <button class="btn" id="continueBtn">Continue →</button>
     </div>
   </main>
