--- a/world.html
+++ b/world.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <div class="gif-bg" id="gifBg" aria-hidden="true"></div>
   <main class="wrap" id="wrap">
     <!-- Step 1 -->
     <section class="step step1" id="step1">
