--- a/world.html
+++ b/world.html
@@ -26,7 +26,7 @@
     <!-- Step 2 (hidden until tap) -->
     <section class="step step2" id="step2" aria-hidden="true">
       <img class="us" src="assets/img/us2.png" alt="Us" />
-      <div class="caption">…and I hope we can build one together someday.</div>
+      <div class="caption">…and I know we will build one together someday.</div>
       <button class="btn" id="toMain">Continue →</button>
     </section>
   </main>
