--- a/together.html
+++ b/together.html
@@ -14,11 +14,11 @@
   <div class="stars" aria-hidden="true"></div>
 
   <main class="wrap">
-    <div class="topText">Always remember that you are not alone anymore..</div>
+    <div class="topText">Always sticking by your side like this..</div>
 
     <img class="gif" src="assets/img/together.gif" alt="Together" />
 
-    <div class="bottomText">You looked stunning that day by the way (you always do).</div>
+    <div class="bottomText">You looked stunning that day by the way (as always).</div>
 
     <button class="btn" id="toMain">Continue →</button>
   </main>
