--- a/knock.html
+++ b/knock.html
@@ -15,15 +15,11 @@
 <body>
   <main class="wrap">
     <div class="card">
-      <h1>Knock! Knock!</h1>
-      <p class="sub">psst… listen closely 👀</p>
+      <h1 class="title">Knock! Knock!</h1>
 
-      <div class="knock" id="knockBox" aria-live="polite">
-        <div class="knockText">Knock! Knock!</div>
-      </div>
+      <img class="media" src="assets/img/cat_knock.jpg" alt="Cat knocking" />
 
       <button class="btn" id="toLetter">Who's there?</button>
-      <div class="hint">(tap anywhere if you don’t hear the sound)</div>
     </div>
   </main>
 
