--- a/letter1.html
+++ b/letter1.html
@@ -7,7 +7,7 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Who's there</title>
+  <title>Letter</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@400;600&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/letter1.css">
@@ -15,9 +15,11 @@
 <body>
   <main class="wrap">
     <div class="card">
-      <h1 class="word">Letter.</h1>
+      <h1 class="title">Letter.</h1>
+
+      <img class="media" src="assets/img/cat_letter.gif" alt="Cat letter gif" />
+
       <button class="btn" id="toLetter2">Letter who?</button>
-      <div class="small">(you have no idea how excited I am for this part)</div>
     </div>
   </main>
 
