--- a/letter2.html
+++ b/letter2.html
@@ -14,22 +14,14 @@
 </head>
 <body>
   <main class="wrap">
-    <h1>letter for you! 💌</h1>
+    <div class="card">
+      <h1 class="title">Letter for you!</h1>
 
-    <section class="stage">
-      <p class="note">Click the letter.</p>
+      <img class="media" src="assets/img/cat_dance.gif" alt="Cat dance gif" />
 
-      <div class="envelopeWrap">
-        <div class="envelope" id="envelope" role="button" tabindex="0" aria-label="Open the letter">
-          <div class="env-body"></div>
-          <div class="letter"></div>
-          <div class="env-flap"></div>
-          <div class="stamp">♡</div>
-        </div>
-      </div>
-
-      <div class="hint">(or press Enter)</div>
-    </section>
+      <button class="btn" id="toMain">Open it</button>
+      <div class="hint">(click to continue)</div>
+    </div>
   </main>
 
   <script src="assets/js/letter2.js"></script>
