--- a/main.html
+++ b/main.html
@@ -92,7 +92,7 @@
 
   <!-- Background music -->
   <audio id="song" loop>
-    <source src="assets/audio/song.mp3" type="audio/mpeg">
+    <source src="assets/img/song.mp3" type="audio/mpeg">
   </audio>
 
   <!-- Center letter -->
