--- a/main.html
+++ b/main.html
@@ -87,7 +87,7 @@
 
   <!-- Music button -->
   <div class="top-controls">
-    <button id="musicBtn" class="pill-btn">Music</button>
+    <button id="musicBtn" class="pill-btn">Some music perhaps?</button>
   </div>
 
   <!-- Background music -->
