--- a/main.html
+++ b/main.html
@@ -95,9 +95,9 @@
 Hello madamji, 
 I’m sorry I couldn’t be by your side today. I hope this brought a little smile to your face. I couldn’t be more honored for the opportunity to spend the rest of my life with you, and I know we will get through this.
 You are stunningly beautiful, but that is perhaps the least remarkable thing about you. You are one of the most resilient people I have ever known — you carry an incredible strength in the way you face everything, 
-quietly and gracefully, without ever letting anyone see how heavy it sometimes is. And yet, you remain gentle (although you could be just a little more gentle with me too… jk). 26 years of gracing this world with your
-presence, it's a shame I've only known you for six months out of them. Twenty-six years of gracing this world with your presence, it feels almost unfair that I’ve only known you for six months of them.
-But I’m grateful that I get to be here now, and even more grateful for every moment, every memory, and every little milestone that still lies ahead of us.
+quietly and gracefully, without ever letting anyone see how heavy it sometimes is. And yet, you remain gentle (although you could be just a little more gentle with me too… jk). Twenty-six years of gracing this world with your presence, 
+it feels almost unfair that I’ve only known you for six months of them. But I’m grateful that I get to be here now, and even more grateful for every moment, every memory, and every little milestone that still lies ahead of us. I love 
+the small muehehehe and snorts, the little dance when the food is good, the way you get excited when you spot small and unique jewellery, the way you feed me and above all, the way you carry yourself. I love you, baby. 
     </p>
   </main>
 
