--- a/main.html
+++ b/main.html
@@ -59,9 +59,10 @@
     line-height: 1.75;
     white-space: pre-wrap;
     margin: 0;
-    color: #000; /* ensure black text */
+    color: #000;
+    text-align: justify;
     }
-    
+
     /* Ensure balloons layer stays behind */
     .balloon-layer{
       position: fixed;
@@ -98,6 +99,11 @@ You are stunningly beautiful, but that is perhaps the least remarkable thing abo
 quietly and gracefully, without ever letting anyone see how heavy it sometimes is. And yet, you remain gentle (although you could be just a little more gentle with me too… jk). Twenty-six years of gracing this world with your presence, 
 it feels almost unfair that I’ve only known you for six months of them. But I’m grateful that I get to be here now, and even more grateful for every moment, every memory, and every little milestone that still lies ahead of us. I love 
 the small muehehehe and snorts, the little dance when the food is good, the way you get excited when you spot small and unique jewellery, the way you feed me and above all, the way you carry yourself. I love you, baby. 
+
+<br><br>
+with love,<br>
+<strong>Samiran</strong>
+
     </p>
   </main>
 
