--- a/main.html
+++ b/main.html
@@ -100,6 +100,10 @@ with love,
 <strong>Samiran</strong>
 
     </p>
+    <div class="next-wrap">
+  <button id="lastQuestionBtn" class="pill-btn">Last question</button>
+</div>
+
   </main>
 
   <script>
