--- a/main.html
+++ b/main.html
@@ -19,6 +19,15 @@
       overflow-x: hidden;
     }
 
+    /* Ensure balloons layer stays behind */
+    .balloon-layer{
+      position: fixed;
+      inset: 0;
+      z-index: 0;
+      pointer-events: none;
+    }
+
+    /* Music button */
     .top-controls{
       position: fixed;
       top: 16px;
@@ -36,39 +45,34 @@
 
     /* Center letter sheet */
     .letter-sheet{
-    width: min(860px, 92vw);
-    background: rgba(255,255,255,0.95);
-    border-radius: 18px;
-    box-shadow: 0 30px 90px rgba(0,0,0,0.35);
-    padding: 26px 22px;
-    z-index: 2;
-    color: #000; /* force black text */
-    }
-  
-    .letter-title{
-    font-family: Fraunces, serif;
-    font-size: clamp(28px, 4.2vw, 44px);
-    margin: 0 0 14px 0;
-    letter-spacing: -0.02em;
-    text-align: center;
-    color: #000;
-    }
-  
-    .letter-body{
-    font-size: 16px;
-    line-height: 1.75;
-    white-space: pre-wrap;
-    margin: 0;
-    color: #000;
-    text-align: justify;
+      width: min(860px, 92vw);
+      background: rgba(255,255,255,0.95);
+      border-radius: 18px;
+      box-shadow: 0 30px 90px rgba(0,0,0,0.35);
+      padding: 26px 22px;
+      z-index: 2;
+      color: #000;
     }
 
-    /* Ensure balloons layer stays behind */
-    .balloon-layer{
-      position: fixed;
-      inset: 0;
-      z-index: 0;
-      pointer-events: none;
+    .letter-body{
+      font-size: 16px;
+      line-height: 1.75;
+      white-space: pre-wrap;
+      margin: 0;
+      color: #000;
+      text-align: justify;
+    }
+
+    /* Last question button wrapper */
+    .next-wrap{
+      margin-top: 22px;
+      display: flex;
+      justify-content: center;
+    }
+
+    #lastQuestionBtn{
+      padding: 12px 18px;
+      font-weight: 900;
     }
   </style>
 </head>
@@ -90,26 +94,25 @@
 
   <!-- Center letter -->
   <main class="letter-sheet">
-
-    <!-- WRITE YOUR LETTER HERE -->
     <p class="letter-body">
 Hello madamji, 
 I’m sorry I couldn’t be by your side today. I hope this brought a little smile to your face. I couldn’t be more honored for the opportunity to spend the rest of my life with you, and I know we will get through this. You are stunningly beautiful, but that is perhaps the least remarkable thing about you. You are one of the most resilient people I have ever known — you carry an incredible strength in the way you face everything, quietly and gracefully, without ever letting anyone see how heavy it sometimes is. And yet, you remain gentle (although you could be just a little more gentle with me too… jk). Twenty-six years of gracing this world with your presence, it feels almost unfair that I’ve only known you for six months of them. But I’m grateful that I get to be here now, and even more grateful for every moment, every memory, and every little milestone that still lies ahead of us. I love the muehehehe and snorts, the little dance when the food is good, the way you get excited when you spot small and unique jewellery, the way you feed me and above all, the way you carry yourself. I love you, baby. 
+
 <br><br>
-with love,
+with love,<br>
 <strong>Samiran</strong>
-
     </p>
-    <div class="next-wrap">
-  <button id="lastQuestionBtn" class="pill-btn">Last question</button>
-</div>
 
+    <div class="next-wrap">
+      <button id="lastQuestionBtn" class="pill-btn">Last question</button>
+    </div>
   </main>
 
   <script>
     (function () {
       const musicBtn = document.getElementById("musicBtn");
       const audio = document.getElementById("song");
+      const lastBtn = document.getElementById("lastQuestionBtn");
 
       let playing = false;
 
@@ -122,11 +125,15 @@ with love,
           } else {
             audio.pause();
             playing = false;
-            musicBtn.textContent = "Music";
+            musicBtn.textContent = "Some music perhaps?";
           }
         } catch(e){
-          console.warn("Could not start audio. Check file path: assets/audio/song.mp3");
+          console.warn("Could not start audio. Check file path: assets/img/song.mp3");
         }
+      });
+
+      lastBtn.addEventListener("click", () => {
+        window.location.href = "valentine.html";
       });
     })();
   </script>
