--- a/valentine.html
+++ b/valentine.html
@@ -158,8 +158,7 @@
       <button class="btn" id="noBtn" type="button">No</button>
     </div>
 
-    <div class="msg" id="msg">YAYYYYYY 💖💖💖</div>
-    <div class="hint">(try clicking “No” 😇)</div>
+    <div class="msg" id="msg">YAYYYYYY!!!!</div>
   </main>
 
   <script>
