--- a/valentine1.html
+++ b/valentine1.html
@@ -8,7 +8,7 @@
 <style>
 body{
     margin:0;
-    background:#b30000; /* deep red */
+    background:#b30000;
     display:flex;
     justify-content:center;
     align-items:center;
@@ -16,20 +16,34 @@ body{
     overflow:hidden;
     font-family: Arial, sans-serif;
     color:white;
+    animation: fadeIn 1s ease forwards;
+}
+
+@keyframes fadeIn{
+    from{ opacity:0; }
+    to{ opacity:1; }
 }
 
 h1{
     position:absolute;
-    top:30px;
-    font-size:60px;
+    top:40px;
+    font-size:70px;
+    letter-spacing:8px;
     z-index:2;
+    animation: pulse 1.2s infinite;
+}
+
+@keyframes pulse{
+    0%,100%{ transform: scale(1); }
+    50%{ transform: scale(1.1); }
 }
 
 video{
-    max-width:90%;
+    width:90%;
+    max-width:900px;
     max-height:80vh;
     border-radius:20px;
-    box-shadow:0 30px 80px rgba(0,0,0,0.5);
+    box-shadow:0 30px 80px rgba(0,0,0,0.6);
 }
 </style>
 </head>
@@ -38,20 +52,33 @@ video{
 
 <h1>!!!!</h1>
 
-<video id="trunksVideo" autoplay playsinline>
+<video id="trunksVideo" playsinline>
     <source src="assets/video/trunks.mp4" type="video/mp4">
 </video>
 
 <script>
 const video = document.getElementById("trunksVideo");
 
-// Go to next page when video ends
-video.addEventListener("ended", () => {
-    window.location.href = "valentine2.html";
+// Try autoplay with sound
+window.addEventListener("load", async () => {
+    try{
+        video.muted = false;
+        await video.play();
+    } catch(e){
+        console.log("Autoplay blocked. Tap to start.");
+    }
 });
 
-// Also allow click to skip
-document.body.addEventListener("click", () => {
+// Fallback if browser blocks autoplay
+document.body.addEventListener("click", async () => {
+    try{
+        video.muted = false;
+        await video.play();
+    } catch(e){}
+});
+
+// Redirect when video ends
+video.addEventListener("ended", () => {
     window.location.href = "valentine2.html";
 });
 </script>
